<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wifi_config_bg"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/common_title_back_selector"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_connect_device_wifi"
            android:textColor="@color/title_text"
            android:textSize="@dimen/title_text_size"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/line_ap"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/title_layout"
        android:background="@color/common_line">

    </RelativeLayout>

    <TextView
        android:id="@+id/tip_ap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_ap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/connect_device_wifi_tip3"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_size"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/ap_progress"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/tip_ap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:indeterminateDrawable="@drawable/common_loading_indeterminate"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange_text"
        android:text="@string/refresh"
        android:layout_below="@+id/tip_ap"
        android:textSize="@dimen/tab_text_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/add_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green_text"
        android:text="@string/scan_add"
        android:layout_below="@+id/tip_ap"
        android:textSize="@dimen/tab_text_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuring_wifi"
                android:textSize="@dimen/txt_size_title" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_connecting_to_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_config_connecting_to_device"
            android:textSize="@dimen/txt_size_notify"
            android:layout_marginBottom="@dimen/margin_line_widget"
            android:textColor="@color/black"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_registering_to_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ap_config_device_try_registering_ezviz_platform"
            android:textSize="@dimen/txt_size_content"
            android:layout_marginBottom="@dimen/margin_line_widget"
            android:textColor="@color/gray"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_adding_to_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step3_adding_device_to_account"
            android:textSize="@dimen/txt_size_content"
            android:textColor="@color/gray"
            android:visibility="gone"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/vg_err_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="1"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/auto_wifi_failed" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/content_text_size"
                android:text="@string/try_again"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:onClick="onClickTryConfigWifiAgain"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
